// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. iconemail sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 68.75,
    }
  }
/>
`;

exports[`2. iconfacebook sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 25,
    }
  }
/>
`;

exports[`3. iconforwardarrow sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 14,
      "width": 7,
    }
  }
/>
`;

exports[`4. iconstar sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 50,
    }
  }
/>
`;

exports[`5. iconcopylink sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 15,
      "width": 15,
    }
  }
/>
`;

exports[`6. iconsavebookmark sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 16,
      "width": 12,
    }
  }
/>
`;

exports[`7. icontwitter sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 62.5,
    }
  }
/>
`;

exports[`8. iconvideo sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 85,
    }
  }
/>
`;

exports[`9. iconvideo360player sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 54,
    }
  }
/>
`;

exports[`10. thestlogo sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 34.48275862068965,
      "width": 50,
    }
  }
/>
`;

exports[`11. thetimeslogo sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 50,
    }
  }
/>
`;

exports[`12. closeicon sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 28,
      "width": 28,
    }
  }
/>
`;

exports[`13. iconforwardchevron sets a width when height is set 1`] = `
<svg
  aria-label="icon-forward-chevron"
  height={50}
  viewBox="42 12 60 120"
>
  <g
    fill="#006699"
  >
    <path
      d="M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z"
    />
  </g>
</svg>
`;
